--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,15 @@
     "name": "concept-labs/orm",
     "description": "(C)oncept-Labs ORM",
     "keywords": ["php","ORM"],
-    "license": "Apache-2.0",
+    "license": "MIT",
     "authors": [
         {
-            "name": "mtr",
-            "email": "info.concept.labs@gmail.com"
+            "name": "Viktor Halytskyi",
+            "email": "concept.galitsky@gmail.com"
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.2",
         "concept-labs/exception": "^1",
         "concept-labs/config": "^1",
         "concept-labs/dbc": "^1",
